fixed positioning of message bubbles to better align with a chat screen

--- a/client/src/stylesheets/UserChatMessage.css
+++ b/client/src/stylesheets/UserChatMessage.css
@@ -9,6 +9,8 @@
     background-color: #4d5d3b;
     border-radius: 1rem;
     width: fit-content;
+    max-width: 400px;
+    overflow-wrap: anywhere;
     padding: 10px;
     margin: 0%;
     margin-bottom: 5px;
